base/be/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-pawn-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pawn-serivce-app-be
      tier: backend
  template:
    metadata:
      labels:
        app: pawn-serivce-app-be
        tier: backend
    spec:
      containers:
        - name: be-pawn-service-container
          image: anhmai7777/pawn-service-be
          ports:
            - containerPort: 80
