base/be/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: be-pawn-service
spec:
  type: ClusterIP
  selector:
    app: pawn-serivce-app-be
    tier: backend
  ports:
    - port: 80
      targetPort: 80
